--- a/planificador/package.json
+++ b/planificador/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.88.0",
     "firebase": "^12.6.0",
     "lucide-vue-next": "^0.555.0",
     "pinia": "^3.0.4",
