--- a/planificador/package.json
+++ b/planificador/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
     "firebase": "^12.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-vue-next": "^0.555.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24"
